# stock_ai

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
src/: main.py  settings.py
src/api/: dependencies.py  router.py
src/core/logging/: config.py
src/integrations/: gigachat.py  tinkoff.py
src/schemas/: __init__.py  stocks.py  trends.py
src/services/: trading.py
tests/unit/api/: test_trends_ai.py
tests/unit/services/: test_trading.py
