[project]
name = "stock-ai"
version = "0.0.1"
description = "Сервис автоматического анализа акций."
requires-python = ">=3.12,<4.0"
packages = [{ include = "src" }]
dependencies = [
    "fastapi>=0.123.10",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
    "gigachat>=0.1.43",
    "pandas>=2.3.3",
    "httpx>=0.28.1",
    "python-json-logger>=4.0.0",
]

[project.scripts]
runner = "src.main:app"

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.9.0"
black = "^25.11.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
mypy = "^1.19.0"
poetry = "^2.2.1"
poetry-core = "^2.2.1"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# =============================================================================
# КОНФИГУРАЦИЯ ИНСТРУМЕНТОВ РАЗРАБОТКИ
# =============================================================================

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | env
  | \.env
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]